Finished settings save & recall feature

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,1 @@
-[adam-4069]
-
-COM_PORT=COM10
-ADAM_ID=1
-ADAM_DO_CHANNEL=1
-PERIOD=10
-DUTY_CYCLE=4
-ENG_MODE=false
+{"Log Filepath Source":0,"Log Filepath byte array":[67,58,92,85,115,101,114,115,92,100,104,101,97,114,100,92,68,111,99,117,109,101,110,116,115,92,48,48,48,50,45,108,97,98,118,105,101,119,45,112,114,111,106,101,99,116,115,92,97,100,97,109,45,52,120,120,120,92,116,101,109,112,108,97,116,101,92,100,97,116,97],"Log File Folder Name":"data","log file name":"log","Include Date in Filename":true,"Include Time in Filename":true}{"data-precision":3,"Include Date":true,"Include Timestamp":true,"Include Milliseconds":true,"sample-rate (Hz)":4,"Logging Active":true}{"unsigned byte array":[67,79,77,49,53],"baud rate (19200)":19200,"Simulate Hardware":false}{"Display Units":"PSI","Zero Offset":2.6200000000000001066,"Sensor Min":0,"Sensor Max":500,"Signal Min":0,"Signal Max":100,"Conversion Factor":0.014503800000000000719}9}
